# MOCAP4ROS2

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
TechMCS_ROS2/: TechMCS_ROS2.sln
TechMCS_ROS2/TechMCS_ROS2/: Program.cs
mocap4ros_composers/mocap_camera_composer/: CMakeLists.txt  package.xml
mocap4ros_composers/mocap_camera_composer/include/mocap_camera_composer/: mocap_camera_composer.hpp
mocap4ros_composers/mocap_camera_composer/src/: mocap_camera_composer.cpp
mocap4ros_composers/mocap_imu_composer/: CMakeLists.txt
mocap4ros_drivers/TechMCS_ROS2/: README.md
mocap4ros_drivers/TechMCS_ROS2/ConsoleApp1/: ConsoleApp1.sln
mocap4ros_drivers/TechMCS_ROS2/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
mocap4ros_drivers/TechMCS_ROS2/ConsoleApp1/ConsoleApp1/Properties/: AssemblyInfo.cs
mocap4ros_drivers/TechMCS_ROS2/TechMCS_ROS2/: TechMCS_ROS2.csproj
mocap4ros_drivers/vicon2_driver/: CMakeLists.txt  README.md  package.xml
mocap4ros_drivers/vicon2_driver/config/: vicon2_driver_params.yaml  vicon_driver_params.yaml
mocap4ros_drivers/vicon2_driver/include/vicon2_driver/: vicon2_driver.hpp
mocap4ros_drivers/vicon2_driver/launch/: vicon.launch.py  vicon2.launch.py
mocap4ros_drivers/vicon2_driver/src/: vicon2_driver.cpp  vicon2_driver_main.cpp
mocap4ros_drivers/vicon2_driver/test/: test_vicon2_driver.cpp
mocap4ros_msgs/msg/: Markers.msg
vicon2/mocap_camera_composer/: CMakeLists.txt  package.xml
vicon2/mocap_camera_composer/include/: mocap_camera_composer.h
vicon2/mocap_camera_composer/include/mocap_camera_composer/: mocap_camera_composer.h  mocap_camera_composer.hpp
vicon2/mocap_camera_composer/src/: mocap_camera_composer.cpp
vicon2/mocap_imu_composer/: package.xml
vicon2/vicon2_bridge/: CMakeLists.txt  package.xml
vicon2/vicon2_bridge/include/: vicon2_bridge.h
vicon2/vicon2_bridge/launch/: vicon.launch.py
vicon2/vicon2_bridge/src/: vicon2_bridge.cpp  vicon2_bridge_main.cpp
vicon2/vicon2_bridge/vicon_sdk/Vicon_SDK_1.3_Linux/32-bit/: Client.h
vicon2/vicon2_bridge/vicon_sdk/Vicon_SDK_1.3_Linux/64-bit/: Client.h
vicon2/vicon2_driver/: CMakeLists.txt  package.xml
vicon2/vicon2_driver/config/: vicon_driver_params.yaml
vicon2/vicon2_driver/include/: vicon2_driver.h
vicon2/vicon2_driver/include/vicon2_driver/: vicon2_driver.h  vicon2_driver.hpp
vicon2/vicon2_driver/launch/: vicon.launch.py
vicon2/vicon2_driver/src/: vicon2_driver.cpp  vicon2_driver_main.cpp
vicon2/vicon2_msgs/: CMakeLists.txt  package.xml
vicon2/vicon2_msgs/msg/: Markers.msg
vicon2/vicon_sdk/Vicon_SDK_1.3_Linux/32-bit/: Client.h
