<package format="2">
  <name>mocap_camera_composer</name>
  <version>0.0.1</version>
  <description>
     This is a ROS2 driver providing data from VICON motion capture systems.
  </description>
  <author>David Vargas</author>
  <maintainer email="david.vargas@urjc.es">David Vargas</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <!--build_depend>message_generation</build_depend-->
  <!-- message_generation renamed in ROS 2 to rosidl_default_generators-->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>vicon2_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <!--exec_depend>message_runtime</exec_depend-->
  <!-- message_runtime renamed in ROS 2 to rosidl_default_runtime
  and do not need to be found by CMake-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>vicon2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>rclcpp</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
