<package format="3">
  <name>vicon2_driver</name>
  <version>0.0.1</version>
  <description>
     This is a ROS2 driver providing data from VICON motion capture systems.
  </description>
  <author>David Vargas</author>
  <maintainer email="david.vargas@urjc.es">David Vargas</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message_generation renamed in ROS 2 to rosidl_default_generators-->
  <depend>rosidl_default_generators</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vicon2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
